[package]
name = "monkey_interpreter"
version = "0.1.0"
edition = "2021"
authors = ["Karim Ibrahim"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/bin/tokenizer.rs"
name = "tokenizer"

[[bin]]
path = "src/bin/lexer.rs"
name = "lexer"

[dependencies]
once_cell = "1.18.0"
unindent = "0.2.1"
whoami = "1.4.1"

[profile.profiling]
inherits = "release"
debug = true
